--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
+    "passport-oauth": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
