--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flash": "^1.1.0",
     "hbs": "^4.0.1",
     "local": "^0.3.3",
+    "mapbox-geocoding": "^0.1.5",
     "mapbox-gl": "^1.1.0",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
